--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "flow-chart-arrow",
-  "version": "0.0.2",
+  "version": "0.1.9",
   "description": "React based svg arrows",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack-dev-server .",
-    "build": "Webpack .",
-    "lib": "webpack --mode production",
-    "test": "test"
+  "main": "dist/Arrow.js",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/Arrow.d.ts",
+      "default": "./dist/Arrow.js"
+    }
   },
   "keywords": [
     "flowchart",
@@ -15,32 +18,22 @@
     "arrow for flowchart",
     "simple arrow"
   ],
-  "author": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
+  },
+  "author": "reris",
   "license": "MIT",
   "devDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@babel/cli": "^7.24.5",
-    "@babel/core": "^7.24.5",
-    "@babel/eslint-parser": "^7.24.5",
-    "@babel/plugin-transform-runtime": "^7.24.3",
-    "@babel/preset-env": "^7.24.5",
-    "@babel/preset-react": "^7.24.1",
-    "@babel/runtime": "^7.24.5",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^7.1.1",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^28.3.0",
-    "path": "^0.12.7",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "@types/react": "^18.3.1",
+    "typescript": "^5.4.5"
   },
   "peerDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^16.0.0 || ^17.0.0 || ^18.0.0"
+  },
+  "homepage": "https://github.com/receperis/flow-chart-arrow#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/receperis/flow-chart-arrow.git"
   }
 }
